# EmsiApiPy

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  generate_raw_docs.py  permissions.ini.sample  permissions.py.sample  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
EmsiApiPy/: acsIndicators.py  aggregateProfiles.py  automationIndex.py  base.py  canadaPostings.py  companies.py  coreLmi.py  emsiTitles.py  geography.py  globalPostings.py  globalProfiles.py  ipeds.py  jobTitleMapping.py  openSkills.py  talentBenchmark.py  unitedKingdomPostings.py  unitedKingdomProfiles.py  usCompensation.py  usInputOutput.py  usOccEarnings.py  usPostings.py
apis/: acsIndicators.py  aggregateProfiles.py  automationIndex.py  base.py  canadaPostings.py  companies.py  coreLmi.py  emsiTitles.py  geography.py  globalPostings.py  globalProfiles.py  ipeds.py  jobTitleMapping.py  openSkills.py  skillClusters.py  talentBenchmark.py  unitedKingdomPostings.py  unitedKingdomProfiles.py  usCompensation.py  usInputOutput.py  usOccEarnings.py  usPostings.py
docs/: acs_indicators.md  automation_index.md  ca_postings.md  core_lmi.md  emsi_titles.md  open_skills.md  us_postings.md  us_profiles.md
samples/: Determining Skill Types.ipynb  Getting Related Skills.ipynb  Job Posting Skill Centrality.ipynb  Job Title Normalization.ipynb  List of Skills with Descriptions.ipynb  Mapping Title to ONET.ipynb  Mapping Title to SOC.ipynb  Skills to Title.ipynb  Title to SOC.ipynb  Title to Skills.ipynb  coreLmiSample.py  download_skills.py  download_titles.py
tests/: conftest.py  (+8 more)
(+16 files in other folders)
