[build-system]
requires = [
    "setuptools >= 40.6.2",
    "wheel >= 0.30.0",
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "EmsiApiPy"
version = "v2.0.0"
description = "Emsi API Python SDK"
authors = ["Caleb Courtney"]
readme = "README.md"
packages = [
    {include = "EmsiApiPy"},
]

[tool.poetry.dependencies]
python = "~3.10.0"
requests = "^2.31.0"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
responses = "^0.25.0"
